Fix Vercel deployment configuration

--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -1,19 +1,7 @@
 {
-  "name": "roleforge-backend",
-  "version": 2,
-  "public": false,
-  "builds": [
-    {
-      "src": "Dockerfile",
-      "use": "@vercel/docker"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/index.js"
-    }
-  ],
+  "buildCommand": "pnpm run build",
+  "outputDirectory": "dist",
+  "devCommand": "pnpm run dev",
   "env": {
     "NODE_ENV": "production",
     "PORT": "4000"
